# crux_geo_app

./: .gitignore  Cargo.toml  rustfmt.toml
.cargo/: config.toml
crux_geolocation/: Cargo.toml
crux_geolocation/src/: lib.rs
shared/: Cargo.toml  uniffi.toml
shared/src/: app.rs  geo_app.rs  lib.rs
shared/src/capabilities/: file_download.rs  mod.rs
shared/src/geo_app/: geo_traits.rs  geo_types.rs  mod.rs  view_types.rs
shared_types/: Cargo.toml  build.rs
web-leptos/: Cargo.toml  index.html
web-leptos/src/: core.rs  main.rs
web-leptos/src/core/: geolocation.rs  mod.rs  storage.rs
