[package]
name = "crux_geolocation"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[features]
typegen = []

[dependencies]
chrono.workspace = true
crux_core.workspace = true
derive_more = { version = "1.0.0", features = ["display", "error"] }
futures = "0.3.30"
jord.workspace = true
serde.workspace = true
