[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
arrayvec = { version = "0.7.6", features = ["serde"] }
bincode = "1.3.3"
chrono.workspace = true
compact_str = { version = "0.8.0", features = ["serde"] }
crux_core.workspace = true
crux_geolocation = { version = "0.1.0", path = "../crux_geolocation" }
crux_kv.workspace = true
crux_time.workspace = true
jord.workspace = true
rstar = { version = "0.12.0", features = ["serde"] }
serde.workspace = true
serde_json = "1.0.127"
smallvec = { version = "1.13.2", features = ["serde", "const_generics"] }
uniffi = { version = "0.28.1", features = ["build", "cli"] }
wasm-bindgen = "0.2.93"

[build-dependencies]
uniffi = { version = "0.28.1", features = ["build", "cli"] }
