[package]
name = "web-leptos"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
base64 = "0.22.1"
build-time = "0.1.3"
chrono.workspace = true
codee = "0.2.0"
compact_str.workspace = true
console_error_panic_hook = "0.1.7"
crux_geolocation = { version = "0.1.0", path = "../crux_geolocation" }
crux_kv.workspace = true
crux_time.workspace = true
leptos = { version = "0.6.14", features = ["csr"] }
leptos-use = { version = "0.13.0", features = ["storage", "use_geolocation"], default-features = false }
shared = { version = "0.1.0", path = "../shared" }
